Bug 328065 - umbrello fails to import python classes without functions
Summary: umbrello fails to import python classes without functions
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.11.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-11-25 14:50 UTC by Ralf Habacker
Modified: 2013-11-25 15:30 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.4
Sentry Crash Report:


Attachments
test case (14.20 KB, text/x-python)
2013-11-25 14:50 UTC, Ralf Habacker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2013-11-25 14:50:31 UTC
When importing a python file which contains classes without any functions, umbrello ignores those classes. 


Reproducible: Always

Steps to Reproduce:
1. open umbrello
2. import appended python file
Actual Results:  
Only classes having methods or class member definitions are imported 

Expected Results:  
All classes should be imported
Comment 1 Ralf Habacker 2013-11-25 14:50:48 UTC
Created attachment 83753 [details]
test case
Comment 2 Ralf Habacker 2013-11-25 15:16:24 UTC
Git commit 779a898aa79a9bac3de1b2cbb7f5a1cfa48bc45e by Ralf Habacker.
Committed on 25/11/2013 at 14:57.
Pushed by habacker into branch 'KDE/4.11'.

Fix bug not importing python classes without methods or members.
FIXED-IN:4.11.4

M  +6    -0    umbrello/codeimport/pythonimport.cpp

http://commits.kde.org/umbrello/779a898aa79a9bac3de1b2cbb7f5a1cfa48bc45e
Comment 3 Ralf Habacker 2013-11-25 15:21:35 UTC
Git commit 852789786aad0e1cf50885ca8454effb79264c32 by Ralf Habacker.
Committed on 25/11/2013 at 14:57.
Pushed by habacker into branch 'KDE/4.12'.

Fix bug not importing python classes without methods or members.
FIXED-IN:4.11.4
(cherry picked from commit 779a898aa79a9bac3de1b2cbb7f5a1cfa48bc45e)

M  +6    -0    umbrello/codeimport/pythonimport.cpp

http://commits.kde.org/umbrello/852789786aad0e1cf50885ca8454effb79264c32
Comment 4 Ralf Habacker 2013-11-25 15:30:48 UTC
Git commit 3f59a392e5b66c573c39d1c834be8e308ef5127b by Ralf Habacker.
Committed on 25/11/2013 at 14:57.
Pushed by habacker into branch 'master'.

Fix bug not importing python classes without methods or members.
FIXED-IN:4.11.4
(cherry picked from commit 779a898aa79a9bac3de1b2cbb7f5a1cfa48bc45e)

M  +6    -0    umbrello/codeimport/pythonimport.cpp

http://commits.kde.org/umbrello/3f59a392e5b66c573c39d1c834be8e308ef5127b