Fix bug not importing python classes without methods or members.

BUG: 328065
FIXED-IN:4.11.4